--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<app-navbar></app-navbar>
+<app-card-section [sections]="sectionsData"></app-card-section>
+<app-map-tarija></app-map-tarija>
+<app-footer></app-footer>
