navbar icon contact

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,27 +1,21 @@
 <footer class="text-center text-lg-start bg-body-tertiary text-muted">
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
         <div class="me-5 d-none d-lg-block">
-            <span>Get connected with us on social networks:</span>
+            <span>Conéctate con nosotras en las redes sociales:</span>
         </div>
 
         <div>
             <a href="" class="me-4 text-reset">
-                <i class="fab fa-facebook-f"></i>
+                <img src="../../../../assets/img/icons/facebook.png" alt="facebook" class="icon-size">
             </a>
             <a href="" class="me-4 text-reset">
-                <i class="fab fa-twitter"></i>
+                <img src="../../../../assets/img/icons/twitter.png" alt="twitter" class="icon-size">
             </a>
             <a href="" class="me-4 text-reset">
-                <i class="fab fa-google"></i>
+                <img src="../../../../assets/img/icons/instagram.png" alt="instagram" class="icon-size">
             </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-github"></i>
+            <a href="https://github.com/0xsissN/environmental-education-angular" class="me-4 text-reset" target="_blank">
+                <img src="../../../../assets/img/icons/github.png" alt="github" class="icon-size">
             </a>
         </div>
     </section>
