--- a/src/app/information/information.component.html
+++ b/src/app/information/information.component.html
@@ -1,3 +1,4 @@
 <app-navbar></app-navbar>
 <app-card-section [sections]="introData"></app-card-section>
+<app-carousel-img [carousel]="carouselData"></app-carousel-img>
 <app-footer></app-footer>
