--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,19 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand m-3" href="http://localhost:4200/home">Biodiversidad</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="http://localhost:4200/home">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="http://localhost:4200/information">Información</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="http://localhost:4200/contact">Contáctanos</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <a class="navbar-brand m-3" href="http://localhost:4200/inicio">Biodiversidad</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="http://localhost:4200/inicio">Inicio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost:4200/biodiversidad">Biodiversidad</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost:4200/contactanos">Contáctanos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost:4200/videos">Videos</a>
+      </li>
+    </ul>
+  </div>
+</nav>
