--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -7,16 +7,16 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="http://localhost:4200/inicio">Inicio</a>
+        <a class="nav-link" routerLink="/home">Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://localhost:4200/biodiversidad">Biodiversidad</a>
+        <a class="nav-link" routerLink="/biodiversity/information">Biodiversidad</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://localhost:4200/contactanos">Contáctanos</a>
+        <a class="nav-link" routerLink="/contact">Contáctanos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://localhost:4200/videos">Videos</a>
+        <a class="nav-link" routerLink="/videos">Videos</a>
       </li>
     </ul>
   </div>
