--- a/src/app/auth/features/sign-in/sign-in.component.html
+++ b/src/app/auth/features/sign-in/sign-in.component.html
@@ -4,9 +4,9 @@
             <div class="text-center mb-4">
                 <a href="#"
                     class="text-decoration-none fs-3 fw-semibold text-dark d-flex align-items-center justify-content-center">
-                    <img class="me-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg" alt="logo"
-                        style="width: 32px; height: 32px;" />
-                    Flowbite
+                    <img class="me-2" src="../../../../assets/img/icons/logo.svg" alt="logo"
+                        style="width: 80px; height: 80px;" />
+                    Educación Ambiental
                 </a>
             </div>
             <div class="card shadow-sm">
