--- a/src/app/shared/components/carousel-img/carousel-img.component.scss
+++ b/src/app/shared/components/carousel-img/carousel-img.component.scss
@@ -1,8 +1,6 @@
 .carousel-container {
     max-width: 800px;
-    /* Ancho máximo del carousel */
     margin: 0 auto;
-    /* Centrar el carousel */
     padding: 2rem 1rem;
 }
 
@@ -26,7 +24,6 @@
 
 .carousel-item {
     height: 500px;
-    /* Altura aumentada */
 
     img {
         height: 100%;
@@ -56,11 +53,10 @@
     font-size: 1.1rem;
     border-radius: 25px;
     transition: all 0.3s ease;
-    background-color: #007bff;
+    background-color: #319647;
     border: none;
 
     &:hover {
-        background-color: #0056b3;
         transform: translateY(-2px);
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
@@ -70,7 +66,6 @@
     }
 }
 
-/* Responsive adjustments */
 @media (max-width: 768px) {
     .carousel-container {
         padding: 1rem;
