--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,86 +1,24 @@
-<footer class="text-center text-lg-start bg-body-tertiary text-muted">
-    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-        <div class="me-5 d-none d-lg-block">
-            <span>Conéctate con nosotros en las redes sociales:</span>
-        </div>
+<footer class="text-center bg-body-tertiary">
+    <div class="container pt-4">
+        <section class="mb-4">
+            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.facebook.com/" target="_blank">
+                <img src="../../../../assets/img/icons/facebook.png" alt="icon-facebook" class="icon-size">
+            </a>
 
-        <div>
-            <a href="" class="me-4 text-reset">
-                <img src="../../../../assets/img/icons/facebook.png" alt="facebook" class="icon-size">
+            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.instagram.com/accounts/login/" target="_blank">
+                <img src="../../../../assets/img/icons/instagram.png" alt="icon-instagram" class="icon-size">
             </a>
-            <a href="" class="me-4 text-reset">
-                <img src="../../../../assets/img/icons/twitter.png" alt="twitter" class="icon-size">
-            </a>
-            <a href="" class="me-4 text-reset">
-                <img src="../../../../assets/img/icons/instagram.png" alt="instagram" class="icon-size">
-            </a>
-            <a href="https://github.com/0xsissN/environmental-education-angular" class="me-4 text-reset" target="_blank">
-                <img src="../../../../assets/img/icons/github.png" alt="github" class="icon-size">
-            </a>
-        </div>
-    </section>
 
-    <section class="">
-        <div class="container text-center text-md-start mt-5">
-            <div class="row mt-3">
-                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        <i class="fas fa-gem me-3"></i>Company name
-                    </h6>
-                    <p>
-                        Here you can use rows and columns to organize your footer content. Lorem ipsum
-                        dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                </div>
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Products
-                    </h6>
-                    <p>
-                        <a href="#!" class="text-reset">Angular</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">React</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Vue</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Laravel</a>
-                    </p>
-                </div>
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Useful links
-                    </h6>
-                    <p>
-                        <a href="#!" class="text-reset">Pricing</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Settings</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Orders</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Help</a>
-                    </p>
-                </div>
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                    <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
-                    <p>
-                        <i class="fas fa-envelope me-3"></i>
-                    </p>
-                    <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-                    <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
-                </div>
-            </div>
-        </div>
-    </section>
+            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://x.com/i/flow/login" target="_blank">
+                <img src="../../../../assets/img/icons/twitter.png" alt="icon-twitter" class="icon-size">
+            </a>
 
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2021 Copyright:
-        <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://github.com/0xsissN/environmental-education-angular" target="_blank">
+                <img src="../../../../assets/img/icons/github.png" alt="icon-github" class="icon-size">
+            </a>
+        </section>
+    </div>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+        © 2024 Copyright: Educación ambiental
     </div>
 </footer>
