--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,9 +1,3 @@
-.collapse.navbar-collapse {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .navbar-nav {
     display: flex;
     gap: 15px;
@@ -12,4 +6,9 @@
 .auth-button {
     margin-left: auto;
     margin-right: 30px;
+}
+
+.icon-size {
+    width: 80px;
+    height: 80px;
 }
