footer contact pdf

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,24 +1,36 @@
-<footer class="text-center bg-body-tertiary">
-    <div class="container pt-4">
-        <section class="mb-4">
+<footer>
+    <div class="container d-flex flex-column flex-lg-row justify-content-center align-items-center py-4">
+        <div class="mb-3 mb-lg-0 me-lg-auto text-center text-lg-start">
+            <img src="../../../../assets/img/icons/logo.svg" alt="logo" title="logo" class="logo-size">
+        </div>
+
+        <div class="d-flex justify-content-center mb-3 mb-lg-0">
             <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.facebook.com/" target="_blank">
-                <img src="../../../../assets/img/icons/facebook.png" alt="icon-facebook" class="icon-size">
+                <img src="../../../../assets/img/icons/facebook.png" alt="icon-facebook" class="icon-size" title="facebook">
             </a>
-
-            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.instagram.com/accounts/login/" target="_blank">
-                <img src="../../../../assets/img/icons/instagram.png" alt="icon-instagram" class="icon-size">
+            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.instagram.com/accounts/login/"
+                target="_blank">
+                <img src="../../../../assets/img/icons/instagram.png" alt="icon-instagram" class="icon-size" title="instagram">
             </a>
-
             <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://x.com/i/flow/login" target="_blank">
-                <img src="../../../../assets/img/icons/twitter.png" alt="icon-twitter" class="icon-size">
+                <img src="../../../../assets/img/icons/twitter.png" alt="icon-twitter" class="icon-size" title="twitter">
             </a>
+            <a class="btn btn-link btn-floating btn-lg text-body m-1"
+                href="https://github.com/0xsissN/environmental-education-angular" target="_blank">
+                <img src="../../../../assets/img/icons/github.png" alt="icon-github" class="icon-size" title="github">
+            </a>
+        </div>
 
-            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://github.com/0xsissN/environmental-education-angular" target="_blank">
-                <img src="../../../../assets/img/icons/github.png" alt="icon-github" class="icon-size">
-            </a>
-        </section>
+        <div class="ms-lg-auto text-center text-lg-start">
+            <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
+            <p><i class="fas fa-home me-3"></i> Nicolas Sivila</p>
+            <p><i class="fas fa-home me-3"></i> Tarija, Bolivia</p>
+            <p><i class="fas fa-phone me-3"></i> +591 69330576</p>
+        </div>
     </div>
+
+
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2024 Copyright: Educación ambiental
+        © 2024 Copyright: Nicolas Sivila
     </div>
 </footer>
