--- a/src/app/biodiversity/information/information.component.html
+++ b/src/app/biodiversity/information/information.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<app-search></app-search>
 <app-card-section [sections]="introData"></app-card-section>
 <app-carousel-img [carousel]="carouselData"></app-carousel-img>
 <app-footer></app-footer>
