--- a/src/app/shared/components/card-video-section/card-video-section.component.scss
+++ b/src/app/shared/components/card-video-section/card-video-section.component.scss
@@ -1,6 +1,7 @@
 .video-sections-container {
     display: flex;
     flex-direction: column;
+    text-align: justify;
     gap: 1.5rem;
     max-width: 1200px;
     margin: 0 auto;
