--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="bg-light">
     <div class="container d-flex flex-column flex-lg-row justify-content-center align-items-center py-4">
         <div class="mb-3 mb-lg-0 me-lg-auto text-center text-lg-start">
             <img src="../../../../assets/img/icons/logo.svg" alt="logo" title="logo" class="logo-size">
@@ -29,8 +29,7 @@
         </div>
     </div>
 
-
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+    <div class="text-center p-3" style="background-color: #D9D9D9;">
         © 2024 Copyright: Nicolas Sivila
     </div>
 </footer>
