--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -23,17 +23,14 @@
           <a class="nav-link" routerLink="/videos" routerLinkActive="active">Videos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/graphs" routerLinkActive="active">Gráficos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="generatePDf()">Revista</a>
+          <a class="nav-link" id="cursor" (click)="generatePDf()">Revista</a>
         </li>
       </ul>
 
       <ul class="navbar-nav">
         <li class="nav-item">
           <a *ngIf="!isAuth" class="nav-link" routerLink="/auth/sign-in">Iniciar sesión</a>
-          <a *ngIf="isAuth" class="nav-link" (click)="logOut()">Cerrar sesión</a>
+          <a *ngIf="isAuth" class="nav-link" id="cursor" (click)="logOut()">Cerrar sesión</a>
         </li>
       </ul>
     </div>
