--- a/src/app/shared/components/card-section/card-section.component.html
+++ b/src/app/shared/components/card-section/card-section.component.html
@@ -6,7 +6,7 @@
         <p>{{section.content}}</p>
       </div>
       <div class="image-container">
-        <img [src]="section.imageUrl" [alt]="section.title">
+        <img [src]="section.imageUrl" [alt]="section.title" title="img">
       </div>
     </div>
   </div>
