--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -5,18 +5,17 @@
         </div>
 
         <div class="d-flex justify-content-center mb-3 mb-lg-0">
-            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.facebook.com/" target="_blank">
+            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.facebook.com/" title="facebook" target="_blank">
                 <img src="../../../../assets/img/icons/facebook.png" alt="icon-facebook" class="icon-size" title="facebook">
             </a>
-            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.instagram.com/accounts/login/"
-                target="_blank">
+            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.instagram.com/accounts/login/" title="instagram" target="_blank">
                 <img src="../../../../assets/img/icons/instagram.png" alt="icon-instagram" class="icon-size" title="instagram">
             </a>
-            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://x.com/i/flow/login" target="_blank">
+            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://x.com/i/flow/login" title="twitter" target="_blank">
                 <img src="../../../../assets/img/icons/twitter.png" alt="icon-twitter" class="icon-size" title="twitter">
             </a>
             <a class="btn btn-link btn-floating btn-lg text-body m-1"
-                href="https://github.com/0xsissN/environmental-education-angular" target="_blank">
+                href="https://github.com/0xsissN/environmental-education-angular" title="github" target="_blank">
                 <img src="../../../../assets/img/icons/github.png" alt="icon-github" class="icon-size" title="github">
             </a>
         </div>
