--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home" routerLinkActive="active">Inicio</a>
+          <a class="nav-link" routerLink="/home" routerLinkActive="active" title="home">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/biodiversity/information" routerLinkActive="active">Biodiversidad</a>
