--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,33 +1,79 @@
 <footer class="bg-light">
-    <div class="container d-flex flex-column flex-lg-row justify-content-center align-items-center py-4">
-        <div class="mb-3 mb-lg-0 me-lg-auto text-center text-lg-start">
-            <img src="../../../../assets/img/icons/logo.svg" alt="logo" title="logo" class="logo-size">
-        </div>
-
-        <div class="d-flex justify-content-center mb-3 mb-lg-0">
-            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.facebook.com/" title="facebook" target="_blank">
-                <img src="../../../../assets/img/icons/facebook.png" alt="icon-facebook" class="icon-size" title="facebook">
-            </a>
-            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.instagram.com/accounts/login/" title="instagram" target="_blank">
-                <img src="../../../../assets/img/icons/instagram.png" alt="icon-instagram" class="icon-size" title="instagram">
-            </a>
-            <a class="btn btn-link btn-floating btn-lg text-body m-1" href="https://x.com/i/flow/login" title="twitter" target="_blank">
-                <img src="../../../../assets/img/icons/twitter.png" alt="icon-twitter" class="icon-size" title="twitter">
-            </a>
-            <a class="btn btn-link btn-floating btn-lg text-body m-1"
-                href="https://github.com/0xsissN/environmental-education-angular" title="github" target="_blank">
-                <img src="../../../../assets/img/icons/github.png" alt="icon-github" class="icon-size" title="github">
-            </a>
-        </div>
-
-        <div class="ms-lg-auto text-center text-lg-start">
-            <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
-            <p><i class="fas fa-home me-3"></i> Nicolas Sivila</p>
-            <p><i class="fas fa-home me-3"></i> Tarija, Bolivia</p>
-        </div>
+  <div
+    class="container d-flex flex-column flex-lg-row justify-content-center align-items-center py-4"
+  >
+    <div class="mb-3 mb-lg-0 me-lg-auto text-center text-lg-start">
+      <img
+        src="../../../../assets/img/icons/logo.svg"
+        alt="logo"
+        title="logo"
+        class="logo-size"
+      />
     </div>
 
-    <div class="text-center p-3" style="background-color: #D9D9D9;">
-        © 2024 Copyright: Nicolas Sivila
+    <div class="d-flex justify-content-center mb-3 mb-lg-0">
+      <a
+        class="btn btn-link btn-floating btn-lg text-body m-1"
+        href="https://www.facebook.com/"
+        title="facebook"
+        target="_blank"
+      >
+        <img
+          src="../../../../assets/img/icons/facebook.png"
+          alt="icon-facebook"
+          class="icon-size"
+          title="facebook"
+        />
+      </a>
+      <a
+        class="btn btn-link btn-floating btn-lg text-body m-1"
+        href="https://www.instagram.com/accounts/login/"
+        title="instagram"
+        target="_blank"
+      >
+        <img
+          src="../../../../assets/img/icons/instagram.png"
+          alt="icon-instagram"
+          class="icon-size"
+          title="instagram"
+        />
+      </a>
+      <a
+        class="btn btn-link btn-floating btn-lg text-body m-1"
+        href="https://x.com/i/flow/login"
+        title="twitter"
+        target="_blank"
+      >
+        <img
+          src="../../../../assets/img/icons/twitter.png"
+          alt="icon-twitter"
+          class="icon-size"
+          title="twitter"
+        />
+      </a>
+      <a
+        class="btn btn-link btn-floating btn-lg text-body m-1"
+        href="https://github.com/0xsissN/environmental-education-angular"
+        title="github"
+        target="_blank"
+      >
+        <img
+          src="../../../../assets/img/icons/github.png"
+          alt="icon-github"
+          class="icon-size"
+          title="github"
+        />
+      </a>
     </div>
+
+    <div class="ms-lg-auto text-center text-lg-start">
+      <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
+      <p><i class="fas fa-home me-3"></i> Nicolas Sivila</p>
+      <p><i class="fas fa-home me-3"></i> Tarija, Bolivia</p>
+    </div>
+  </div>
+
+  <div class="text-center p-3" style="background-color: #d9d9d9">
+    © 2024 Copyright: Nicolas Sivila
+  </div>
 </footer>
