--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,26 +1,54 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/home">
-      <img src="../../../../assets/img/icons/logo.svg" alt="logo" class="icon-size" title="logo">
+      <img
+        src="../../../../assets/img/icons/logo.svg"
+        alt="logo"
+        class="icon-size"
+        title="logo"
+      />
     </a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home" routerLinkActive="active" title="home">Inicio</a>
+          <a
+            class="nav-link"
+            routerLink="/home"
+            routerLinkActive="active"
+            title="home"
+            >Inicio</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/biodiversity/information" routerLinkActive="active">Biodiversidad</a>
+          <a
+            class="nav-link"
+            routerLink="/biodiversity/information"
+            routerLinkActive="active"
+            >Biodiversidad</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contáctanos</a>
+          <a class="nav-link" routerLink="/contact" routerLinkActive="active"
+            >Contáctanos</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/videos" routerLinkActive="active">Videos</a>
+          <a class="nav-link" routerLink="/videos" routerLinkActive="active"
+            >Videos</a
+          >
         </li>
         <li class="nav-item">
           <a class="nav-link" id="cursor" (click)="generatePDf()">Revista</a>
@@ -29,8 +57,11 @@
 
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a *ngIf="!isAuth" class="nav-link" routerLink="/auth/sign-in">Iniciar sesión</a>
-          <a *ngIf="isAuth" class="nav-link" id="cursor" (click)="logOut()">Cerrar sesión</a>
+          @if (!isAuth) {
+          <a class="nav-link" routerLink="/auth/sign-in">Iniciar sesión</a>
+          } @else {
+          <a class="nav-link" id="cursor" (click)="logOut()">Cerrar sesión</a>
+          }
         </li>
       </ul>
     </div>
