--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,15 +1,23 @@
 <div class="search-container">
-    <input type="text" [(ngModel)]="query" (input)="searchItem()" placeholder="Buscar ecosistemas, flora, fauna, etc." />
-
-    <div *ngIf="results.length > 0" class="results">
-        <ul>
-            <li *ngFor="let item of results" (click)="selectItem(item)" class="clickable-item">
-                <strong>{{ item }}</strong>
-            </li>
-        </ul>
-    </div>
-
-    <div *ngIf="results.length === 0 && query.trim()">
-        <p>No se encontraron resultados para "{{ query }}"</p>
-    </div>
+  <input
+    type="text"
+    [(ngModel)]="query"
+    (input)="searchItem()"
+    placeholder="Buscar ecosistemas, flora, fauna, etc."
+  />
+  @if (results.length > 0) {
+  <div class="results">
+    <ul>
+      @for (item of results; track $index) {
+      <li (click)="selectItem(item)" class="clickable-item">
+        <strong>{{ item }}</strong>
+      </li>
+      }
+    </ul>
+  </div>
+  } @if (results.length === 0 && query.trim()) {
+  <div>
+    <p>No se encontraron resultados para "{{ query }}"</p>
+  </div>
+  }
 </div>
